(search) api details fix word wrap

--- a/applications/search/src/components/listType1/listType1.scss
+++ b/applications/search/src/components/listType1/listType1.scss
@@ -5,5 +5,5 @@
   border-radius: 5px;
   border: 1px $color0;
   padding: 2em;
-  word-break: break-word;
+  word-wrap: break-word;
 }
